test_regress/t/t_typedef_no_bad.out
%Error: t/t_typedef_no_bad.v:10:4: Can't find typedef: 'sometype'
   10 |    sometype p;
      |    ^~~~~~~~
%Error: Exiting due to
